test/valid/54483_power_right_assoc/power_right_assoc.mag
-- Author: 54483, Pedro Barata

-- Tests that ^ is right-associative: 2^3^2 = 2^(3^2) = 2^9 = 512

fun main (_) : Unit -> Unit =
  print(2 ^ 3 ^ 2)
