test/invalid-semantics/60294_wildcard_in_expression/wildcard_in_expression.mag
-- Author: 60294, Pedro Rosa
fun f (x): Int -> Int = x + _